<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#479a5f"
    android:orientation="vertical"
    tools:context="com.example.aditmail.projectminibank.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:fontFamily="casual"
            android:text="@string/judul_MiniBank"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="36sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/versi"
            android:textAlignment="center"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/projectOleh"
            android:textAlignment="center"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="casual"
            android:text="@string/id"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_LoginUsername"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="75dp"
            android:layout_marginRight="75dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/white"
            android:ems="10"
            android:inputType="textPersonName"
            android:lineSpacingExtra="8sp"
            android:text=""
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="casual"
            android:text="@string/pass"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_LoginPassword"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="75dp"
            android:layout_marginRight="75dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/white"
            android:ems="10"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btnLogin"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="75dp"
            android:layout_marginRight="75dp"
            android:layout_marginTop="15dp"
            android:elevation="0dp"
            android:fontFamily="monospace"
            android:foreground="?android:attr/colorControlHighlight"
            android:onClick="onLoginAplikasi"
            android:text="@string/masuk"
            android:textColor="?android:attr/textColorLink"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_Registrasi"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="30dp"
            android:clickable="true"
            android:fontFamily="casual"
            android:onClick="clickRegistrasi"
            android:text="@string/daftar"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>
</FrameLayout>
