<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d8d3d3"
    android:orientation="vertical"
    tools:context="com.example.aditmail.projectminibank.UpdatePassword">

    <TextView
        android:id="@+id/textView21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="casual"
        android:text="@string/ubahPass"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:fontFamily="casual"
        android:text="@string/kunci"
        android:textColor="?attr/textColorAlertDialogListItem"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp" />

    <EditText
        android:id="@+id/updtPassword"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="20dp"
        android:clickable="true"

        android:fontFamily="casual"
        android:text="@string/konfirmasi_kunci"
        android:textColor="?attr/textColorAlertDialogListItem"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="0dp" />

    <EditText
        android:id="@+id/updtKonfirmasiPassword"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/btnUpdatePassword"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="85dp"
        android:layout_marginRight="85dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/updtPassword"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="93dp"
        tools:layout_editor_absoluteY="0dp" />

</LinearLayout>
