<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eae3e3"
    tools:context="com.example.aditmail.projectminibank.MenuUtama">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="75dp"
            android:fontFamily="casual"
            android:text="@string/main"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="ID"
            android:visibility="invisible" />


        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/hello"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txt_username"
            android:layout_width="286dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:fontFamily="casual"
            android:text="Username"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="28sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnKredit"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="30dp"
            android:background="@android:color/holo_red_light"
            android:text="@string/tombol_kredit"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnDebit"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/holo_red_light"
            android:text="@string/tombol_debit"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>


</RelativeLayout>
